# ironic-inspector-salt-plugin

./: README.rst  setup.cfg  setup.py
ironic_inspector_salt_plugin/: __init__.py  salt.py
