[metadata]
name = ironic-inspector-salt-pugin
summary = Salt plugin for Ironic Inspector
#description-file = README.rst
author = Oleg Y.
author-email = oleg.iurchenko@mirantis.com
home-page = https://github.com/realjktu/ironic_inspector_salt_pugin
license = Apache-2
classifier = 
	Environment :: Console
	Environment :: OpenStack
	Intended Audience :: System Administrators
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2

[files]
packages = ironic_inspector_salt_pugin

[entry_points]
ironic_inspector.hooks.processing = 
	example = ironic_inspector_salt_pugin.salt:SaltProcessingHook

